# nanoTabICL

./: .gitignore  .python-version  AGENTS.md  README.md  pyproject.toml  train_modal.py
docs/: app.js  index.html  styles.css
experiments/classification/: eval_modal.py  train_modal.py
notes/: classification-50k.md
src/nanotabicl/: __init__.py  demo.py  nano_model.py
tests/: test_perf.py  test_smoke.py
