[project]
name = "nanotabicl"
version = "0.1.0"
description = "Educational nano TabICLv2-style implementation for tabular ICL"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
]

[project.scripts]
nanotabicl-demo = "nanotabicl.demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
